# moonrepo.proto-plugins

./: .gitignore  .prototools  Cargo.toml  README.md  justfile  moon.yml
.github/workflows/: ci.yml
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: rust.yml
extensions/common/: Cargo.toml
extensions/common/src/: migrator.rs
extensions/download/: CHANGELOG.md  Cargo.toml
extensions/download/src/: download_ext.rs
extensions/download/tests/: download_test.rs
extensions/migrate-nx/: CHANGELOG.md  Cargo.toml
extensions/migrate-nx/src/: nx_migrator.rs
extensions/migrate-nx/tests/: migrate_nx_test.rs
extensions/migrate-turborepo/: CHANGELOG.md  Cargo.toml
extensions/migrate-turborepo/src/: turbo_migrator.rs
extensions/migrate-turborepo/tests/: migrate_turborepo_test.rs
extensions/unpack/: CHANGELOG.md  Cargo.toml
extensions/unpack/src/: unpack_ext.rs
scripts/: generatePythonReleases.mjs  release.mjs
tools/bun/: CHANGELOG.md  Cargo.toml  README.md
tools/deno/: CHANGELOG.md  Cargo.toml  README.md
tools/go/: CHANGELOG.md  Cargo.toml  README.md
tools/internal-schema/: CHANGELOG.md  Cargo.toml  README.md
tools/just/: CHANGELOG.md  Cargo.toml  README.md
tools/moon/: CHANGELOG.md  Cargo.toml  README.md
tools/node/: CHANGELOG.md  Cargo.toml  README.md
tools/node-depman/: CHANGELOG.md  Cargo.toml  README.md
tools/proto/: CHANGELOG.md  Cargo.toml
tools/python/: CHANGELOG.md  Cargo.toml  README.md  releases.json
tools/python-uv/: Cargo.toml  README.md
tools/ruby/: Cargo.toml  README.md
tools/rust/: CHANGELOG.md  Cargo.toml  README.md
(+83 files in other folders)
