[workspace]
resolver = "2"
members = ["crates/*", "extensions/*", "tools/*"]

[workspace.dependencies]
# Common
extism-pdk = { version = "1.3.0" }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
rustc-hash = "2.1.0"
schematic = { version = "0.17.9", default-features = false, features = [
    "schema",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serial_test = "3.2.0"
starbase_sandbox = "0.8.1"
starbase_utils = { version = "0.9.4", default-features = false }
tokio = { version = "1.43.0", features = ["full"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }

# moon
moon_common = { version = "0.0.10" }         # , path = "../moon/crates/common" }
moon_config = { version = "0.0.12" }         # , path = "../moon/crates/config" }
moon_pdk = { version = "0.0.12" }            # , path = "../moon/crates/pdk" }
moon_pdk_test_utils = { version = "0.0.13" } # , path = "../moon/crates/pdk-test-utils" }
moon_target = { version = "0.0.9" }          # , path = "../moon/crates/target" }

# proto
proto_pdk = { version = "0.25.5" }            # , path = "../proto/crates/pdk" }
proto_pdk_api = { version = "0.24.6" }        # , path = "../proto/crates/pdk-api" }
proto_pdk_test_utils = { version = "0.31.0" } # , path = "../proto/crates/pdk-test-utils" }

# Node.js
nodejs_package_json = "0.3.1"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
